force-app/main/default/objects/Source_Forecast__c/Source_Forecast__c.object-meta.xml
<CustomObject>
    <description>Projected next-period signed cases per source, with deterministic confidence band and an AI-or-template recommendation narrative.</description>
    <label>Source Forecast</label>
    <nameField>
        <displayFormat>SRF-{0000}</displayFormat>
        <label>Source Forecast Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Source Forecasts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>