force-app/main/default/objects/Source_Forecast__c/fields/Actual_Signed__c.field-meta.xml
<CustomField>
    <fullName>Actual_Signed__c</fullName>
    <description>Back-test: signings that actually occurred for this source in the horizon.</description>
    <label>Actual Signed</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>