force-app/main/default/objects/Source_Forecast__c/fields/Confidence_High__c.field-meta.xml
<CustomField>
    <fullName>Confidence_High__c</fullName>
    <description>Upper bound of the projection.</description>
    <label>Confidence High</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>