force-app/main/default/objects/Source_Forecast__c/fields/Confidence_Low__c.field-meta.xml
<CustomField>
    <fullName>Confidence_Low__c</fullName>
    <description>Lower bound of the projection.</description>
    <label>Confidence Low</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>