force-app/main/default/objects/Source_Forecast__c/fields/Error_Pct__c.field-meta.xml
<CustomField>
    <fullName>Error_Pct__c</fullName>
    <description>Back-test: absolute percent error of projected vs actual.</description>
    <label>Error Pct</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>