force-app/main/default/objects/Source_Forecast__c/fields/Horizon_Days__c.field-meta.xml
<CustomField>
    <fullName>Horizon_Days__c</fullName>
    <description>Forecast horizon in days.</description>
    <label>Horizon Days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>