force-app/main/default/objects/Source_Forecast__c/fields/Narrative__c.field-meta.xml
<CustomField>
    <fullName>Narrative__c</fullName>
    <description>Reallocation recommendation. Claude when it passed the figure guardrail, else template.</description>
    <label>Narrative</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>