force-app/main/default/objects/Source_Forecast__c/fields/Owner_User__c.field-meta.xml
<CustomField>
    <fullName>Owner_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Firm owner the recommendation was delivered to.</description>
    <label>Owner User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Source Forecasts</relationshipLabel>
    <relationshipName>Source_Forecasts</relationshipName>
    <type>Lookup</type>
</CustomField>