force-app/main/default/objects/Source_Forecast__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>The source this forecast is for.</description>
    <label>Source</label>
    <length>120</length>
    <type>Text</type>
</CustomField>